--- a/src/App.css
+++ b/src/App.css
@@ -277,9 +277,19 @@ body {
     font-size: 2rem;
   }
 }
+
+a {
+  text-decoration: none;
+}
+
 .back-link {
   color: white;
+  font-size: 20px;
 }
 .back-link:hover {
   color: rgba(248, 65, 248, 0.456);
+}
+
+.page-container {
+  text-align: center;
 }
