--- a/src/App.css
+++ b/src/App.css
@@ -284,7 +284,7 @@ a {
 
 .back-link {
   color: white;
-  font-size: 20px;
+  font-size: 50px;
 }
 .back-link:hover {
   color: rgba(248, 65, 248, 0.456);
@@ -292,4 +292,16 @@ a {
 
 .page-container {
   text-align: center;
+}
+.res-img {
+  width: 1000px;
+  height: auto;
+}
+.linkedin-logo {
+  width: 80px;
+  height: auto;
+}
+.github-logo {
+  width: 80px;
+  height: auto;
 }
