--- a/src/App.css
+++ b/src/App.css
@@ -305,3 +305,14 @@ a {
   width: 80px;
   height: auto;
 }
+.gmail {
+  width: 85px;
+  height: auto;
+}
+.contact-list {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  align-items: center;
+}
